# ShadingExperiments-Raylib

./: .gitignore  CMakeLists.txt  CMakeOptions.txt  README.md  clean.sh  imgui_version.sh
lib/rlImGui/: CMakeLists.txt  raylib_imgui.cpp  raylib_imgui.h
src/: main.cpp
src/examples/: CMakeLists.txt
src/examples/0_Test_ImGUI/: raylib_imgui.h  test_imgui.cpp
src/examples/1_basic_phong/: CMakeLists.txt.bak  base_phong.cpp
src/examples/1_basic_phong/GUI/: GuiMain.h
src/examples/1_basic_phong/res/shader/: basic_lighting.vs  phong.fs
src/examples/2_phong_with_materials/: base_material.cpp
src/examples/2_phong_with_materials/GUI/: Gui.h
