set(EXAMPLE_DIRS
    1_basic_phong
)

macro(configureProject LOCAL_PROJECT_NAME)
    project(${LOCAL_PROJECT_NAME})
    file(GLOB_RECURSE SOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS ${PROJECT_NAME}/*.cpp ${PROJECT_NAME}/*.c)
    file(GLOB_RECURSE HEADER_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS ${PROJECT_NAME}/*.hpp ${PROJECT_NAME}/*.h)
    file(GLOB_RECURSE RESOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}" "${PROJECT_NAME}/res/*")

    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${LOCAL_PROJECT_NAME})

    add_executable(${LOCAL_PROJECT_NAME} ${SOURCE_FILES})
    
    foreach(RESOURCE ${RESOURCE_FILES})
        configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/${RESOURCE}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${RESOURCE}")
    endforeach()

    set_property(DIRECTORY PROPERTY ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endmacro()

foreach(DIR ${EXAMPLE_DIRS})
    configureProject(${DIR})
endforeach()
