set(EXAMPLE_DIRS
    0_Test_ImGUI
    1_basic_phong
)

function(configureProject LOCAL_PROJECT_NAME)
    set(ROOT ${PROJECT_SOURCE_DIR})
    project(${LOCAL_PROJECT_NAME})
    file(GLOB_RECURSE SOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS ${PROJECT_NAME}/*.cpp ${PROJECT_NAME}/*.c ${ROOT}/include/*.cpp)
    file(GLOB_RECURSE HEADER_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS ${PROJECT_NAME}/*.hpp ${PROJECT_NAME}/*.h)
    file(GLOB_RECURSE RESOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}" "${PROJECT_NAME}/res/*")

    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${LOCAL_PROJECT_NAME})

    add_executable(${LOCAL_PROJECT_NAME} ${SOURCE_FILES})
    
    foreach(RESOURCE ${RESOURCE_FILES})
        configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/${RESOURCE}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${RESOURCE}")
    endforeach()

endfunction()

foreach(DIR ${EXAMPLE_DIRS})
    configureProject(${DIR})
endforeach()
